# concise-cot

./: .gitignore  README.md  learning.md  pyproject.toml
configs/: default.yaml
docker/: README.md
report/: report.md
src/concise_cot/: __init__.py  audit_eval.py  compress.py  config.py  data.py  eval.py  gen_teacher.py  inspect_jsonl.py  make_report_artifacts.py  sample_adapter.py  train.py  tts_score.py  verify.py
tests/: test_audit_eval.py  test_compress.py  test_data.py  test_eval.py  test_gen_teacher.py  test_make_report_artifacts.py  test_train.py  test_verify.py
